--- a/nb.ipynb
+++ b/nb.ipynb
@@ -1,12 +1,130 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Integration, EDA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "import matplotlib\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "def set_options():\n",
+    "    # matplotlib params\n",
+    "    matplotlib.rc_params['figure.figsize'] = [12, 8]\n",
+    "    # seaborn styles\n",
+    "    sns.set_style()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.concat(\n",
+    "    [pd.read_csv('./data/train_features.csv'),\n",
+    "     pd.read_csv('./data/train_targets.csv')],\n",
+    "    axis=1)\n",
+    "df = df.loc[:,~df.columns.duplicated()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Memory usage of dataframe is 75.41 MB\n",
+      "Memory usage after optimization is: 15.97 MB\n",
+      "Decreased by 78.8%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Use memory usage reducing code from: https://www.kaggle.com/gemartin/load-data-reduce-memory-usage\n",
+    "def reduce_mem_usage(df):\n",
+    "    \"\"\" iterate through all the columns of a dataframe and modify the data type\n",
+    "        to reduce memory usage.        \n",
+    "    \"\"\"\n",
+    "    start_mem = df.memory_usage().sum() / 1024**2\n",
+    "    print('Memory usage of dataframe is {:.2f} MB'.format(start_mem))\n",
+    "    \n",
+    "    for col in df.columns:\n",
+    "        col_type = df[col].dtypes\n",
+    "        \n",
+    "        if col_type != object:\n",
+    "            c_min = df[col].min()\n",
+    "            c_max = df[col].max()\n",
+    "            if str(col_type)[:3] == 'int':\n",
+    "                if c_min > np.iinfo(np.int8).min and c_max < np.iinfo(np.int8).max:\n",
+    "                    df[col] = df[col].astype(np.int8)\n",
+    "                elif c_min > np.iinfo(np.int16).min and c_max < np.iinfo(np.int16).max:\n",
+    "                    df[col] = df[col].astype(np.int16)\n",
+    "                elif c_min > np.iinfo(np.int32).min and c_max < np.iinfo(np.int32).max:\n",
+    "                    df[col] = df[col].astype(np.int32)\n",
+    "                elif c_min > np.iinfo(np.int64).min and c_max < np.iinfo(np.int64).max:\n",
+    "                    df[col] = df[col].astype(np.int64)  \n",
+    "            else:\n",
+    "                if c_min > np.finfo(np.float16).min and c_max < np.finfo(np.float16).max:\n",
+    "                    df[col] = df[col].astype(np.float16)\n",
+    "                elif c_min > np.finfo(np.float32).min and c_max < np.finfo(np.float32).max:\n",
+    "                    df[col] = df[col].astype(np.float32)\n",
+    "                else:\n",
+    "                    df[col] = df[col].astype(np.float64)\n",
+    "        else:\n",
+    "            df[col] = df[col].astype('category')\n",
+    "\n",
+    "    end_mem = df.memory_usage().sum() / 1024**2\n",
+    "    print('Memory usage after optimization is: {:.2f} MB'.format(end_mem))\n",
+    "    print('Decreased by {:.1f}%'.format(100 * (start_mem - end_mem) / start_mem))\n",
+    "    \n",
+    "    return df\n",
+    "df = reduce_mem_usage(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 39675 entries, 0 to 39674\n",
+      "Columns: 250 entries, match_id_hash to next_roshan_team\n",
+      "dtypes: category(2), float16(31), int16(67), int32(10), int8(140)\n",
+      "memory usage: 16.0 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pass"
+    "sns.pairplot(df)"
    ]
   }
  ],
