added functionality to query hero statistics with minimal example, json library support

--- a/nb.ipynb
+++ b/nb.ipynb
@@ -257,13 +257,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "71ad743a5b54406e80676c1206762513",
+       "model_id": "d7fd0d043c0246a589635f7e1247c811",
        "version_major": 2,
        "version_minor": 0
       },
@@ -278,20 +278,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n"
+      "\n",
+      "Done\n"
      ]
     }
    ],
    "source": [
     "from tqdm import tqdm_notebook\n",
     "from collections import OrderedDict\n",
-    "import ujson\n",
+    "try:\n",
+    "    import ujson as json\n",
+    "except ModuleNotFoundError:\n",
+    "    import json\n",
+    "\n",
+    "# Define utility function to iterate through all heroes in a match\n",
+    "def iter_hero_cols(col_desc='hero_id'):\n",
+    "    for c in ['r','d']:\n",
+    "        for i in range(1,6):\n",
+    "            yield f'{c}{i}_{col_desc}'\n",
     "\n",
     "# First take a look at how many unique hero ID's we can find\n",
     "unique_heroes = []\n",
-    "for c in ['r','d']:\n",
-    "    for i in range(1,6):\n",
-    "        unique_heroes += df[f'{c}{i}_hero_id'].unique().tolist()\n",
+    "for col in iter_hero_cols():\n",
+    "    unique_heroes += df[col].unique().tolist()\n",
     "hero_count = len(set(unique_heroes))\n",
     "\n",
     "# Loop through the large JSON until we retrieved 115 hero names!\n",
@@ -301,7 +310,7 @@
     "done = False\n",
     "with open('data/train_matches.jsonl') as raw:\n",
     "    for game in tqdm_notebook(raw, total=df.shape[0]):\n",
-    "        game = ujson.loads(game)\n",
+    "        game = json.loads(game)\n",
     "        for player in game['players']:\n",
     "            hero_id = player['hero_id']\n",
     "            hero_name = player['hero_name'][14:].replace('_',' ')\n",
@@ -325,7 +334,9 @@
     "\n",
     "zuus_key = [hero_id for hero_id in id_to_hero.keys() \n",
     "                    if id_to_hero[hero_id] == 'zuus']\n",
-    "if zuus_key: id_to_hero[zuus_key[0]] = 'zeus'"
+    "if zuus_key: id_to_hero[zuus_key[0]] = 'zeus'\n",
+    "    \n",
+    "print('Done')"
    ]
   },
   {
@@ -497,7 +508,7 @@
    "source": [
     "# Read the hero classes file\n",
     "f = open('./data/hero_classes.json')\n",
-    "hero_classes = ujson.load(f)\n",
+    "hero_classes = json.load(f)\n",
     "f.close()\n",
     "\n",
     "# Define a function to match names between datasets.\n",
@@ -1267,6 +1278,138 @@
    ],
    "source": [
     "heroes.sort_values('dps', ascending=False).head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generating some hero statistics from our data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 267,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>hero_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>antimage</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>axe</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>bane</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>bloodseeker</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>crystal maiden</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             name  hero_id\n",
+       "1        antimage        1\n",
+       "2             axe        2\n",
+       "3            bane        3\n",
+       "4     bloodseeker        4\n",
+       "5  crystal maiden        5"
+      ]
+     },
+     "execution_count": 267,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hero_statistics = pd.DataFrame(heroes['name'])\n",
+    "hero_statistics['hero_id'] = hero_statistics['name'].map(hero_to_id.get)\n",
+    "hero_statistics.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 269,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_stat_data(hero_id, stat):\n",
+    "    all_data = pd.Series()\n",
+    "    for col_head in iter_hero_cols(col_desc=''):\n",
+    "        hero_id_col = col_head + 'hero_id'\n",
+    "        hero_filter = (df[hero_id_col] == hero_id)\n",
+    "        hero_stat = col_head + stat\n",
+    "        all_data = pd.concat([all_data, df.loc[hero_filter, hero_stat]],\n",
+    "                             ignore_index=True)\n",
+    "    return all_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 271,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count     3293.000000\n",
+       "mean      9193.671121\n",
+       "std       7932.136180\n",
+       "min         26.000000\n",
+       "25%       2894.000000\n",
+       "50%       7166.000000\n",
+       "75%      13435.000000\n",
+       "max      53878.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 271,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_stat_data(hero_to_id['sven'], 'gold').describe()  ## pd.Series"
    ]
   }
  ],
